--- a/paper/references.bib
+++ b/paper/references.bib
@@ -64,3 +64,60 @@
   note         = {R package version 1.2.1},
   url          = {https://CRAN.R-project.org/package=scales}
 }
+
+@Manual{tidyverse,
+  title        = {tidyverse: Easily Install and Load the Tidyverse},
+  author       = {Hadley Wickham and Jim Hester and Lionel Henry and many others},
+  year         = {2023},
+  note         = {R package version 2.0.0},
+  url          = {https://CRAN.R-project.org/package=tidyverse}
+}
+
+@Manual{here,
+  title        = {here: A Simpler Way to Find Your Files},
+  author       = {Kirill Müller},
+  year         = {2020},
+  note         = {R package version 1.0.1},
+  url          = {https://CRAN.R-project.org/package=here}
+}
+
+@Manual{maps,
+  title        = {maps: Draw Geographical Maps},
+  author       = {Richard A. Becker and Allan R. Wilks and Ray Brownrigg and Thomas P. Minka and Alex Deckmyn},
+  year         = {2018},
+  note         = {R package version 3.3.0},
+  url          = {https://CRAN.R-project.org/package=maps}
+}
+
+@Manual{knitr,
+  title        = {Dynamic Documents with R and knitr},
+  author       = {Yihui Xie},
+  year         = {2015},
+  note         = {2nd edition, Chapman and Hall/CRC, R package version 1.36},
+  url          = {https://yihui.org/knitr/}
+}
+
+@Manual{brms,
+  title        = {brms: An R Package for Bayesian Multilevel Models Using Stan},
+  author       = {Paul-Christian Bürkner},
+  year         = {2017},
+  note         = {Journal of Statistical Software, R package version 2.17.3},
+  url          = {https://doi.org/10.18637/jss.v080.i01}
+}
+
+@Manual{bayesplot,
+  title        = {bayesplot: Plotting for Bayesian Models},
+  author       = {Jonah Gabry and TJ Mahr},
+  year         = {2021},
+  note         = {R package version 1.8.1},
+  url          = {https://mc-stan.org/bayesplot/}
+}
+
+@Manual{kableExtra,
+  title        = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author       = {Hao Zhu},
+  year         = {2021},
+  note         = {R package version 1.3.4},
+  url          = {https://CRAN.R-project.org/package=kableExtra}
+}
+", file = "references.bib")
